# poisson

./: Cargo.toml
poisson/: Cargo.toml
poisson-visualisation/: Cargo.toml
poisson-visualisation/src/: main.rs
poisson/benches/: dim2.rs  dim3.rs  dim4.rs
poisson/src/: lib.rs
poisson/src/algorithm/: bridson.rs  ebeida.rs
poisson/src/utils/: math.rs  mod.rs
poisson/tests/: adding.rs  dim2.rs  reproductions.rs  validity.rs
poisson/tests/helper/: mod.rs
