[package]
name = "poisson"
version = "0.11.0"
authors = ["WaDelma <>"]
description = "Poisson-disk distribution generator."
repository = "https://github.com/WaDelma/poisson"
readme = "../README.md"
keywords = [ "distribution", "poisson-disk", "multidimensional", "sampling" ]
license = "MIT"
edition = "2024"

[badges]
travis-ci = { repository = "WaDelma/poisson" }
coveralls = { repository = "WaDelma/poisson", service = "github" }

[dependencies]
rand = {version="0.9.2", features=["small_rng", "std", "std_rng"]}
rand_distr = "0.5.1"
alga = "0.9.3"
num-traits = "0.2"
lazy_static = "1.3"
modulo = "0.1"
sphere = "0.3"

[dev-dependencies]
nalgebra = { version = "0.34.1", features = ["alga", "rand"] }
